project2/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 10
  minReadySeconds: 5
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: project2
  template:
    metadata:
      labels:
        app: project2
    spec:
      containers:
      - name: project2-container
        image: kth844/project2:1
        ports:
        - containerPort: 8080
