project2/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: project2
spec:
  selector:
    app: project2
  ports:
  - port: 8080
    targetPort: 8080
