project2/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/user-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/demo/(.*)"
        backend:
          service:
            name: service
            port: 
              number: 8080
      - pathType: Prefix
        path: "/grafana/?(.*)"
        backend:
          service:
            name: prom-grafana
            port: 
              number: 80
